fixed checkbox on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,6 @@
 .header {
   text-align: center;
   padding: 20px;
-  margin-top: 128px;
 }
 
 .title {
@@ -61,12 +60,6 @@
   display: none;
 }
 
-@media (max-width: 1030px) {
-  .header {
-    margin-top: 0;
-  }
-}
-
 @media (max-width: 830px) {
   .scrollContent {
     gap: 15px;
@@ -101,11 +94,5 @@
   /* Показываем дубликат на мобильных */
   .duplicate {
     display: flex;
-  }
-}
-
-@media (max-width: 480px) {
-  .title {
-    font-size: 42px;
   }
 }
